--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,25 @@ apply plugin: 'eclipse'
 repositories {
     mavenCentral()
 }
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+jar {
+    baseName = 'sales-app'
+    version =  '0.1.0-SNAPSHOT'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
+}
 
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    compile "joda-time:joda-time:2.2"
     testCompile group: 'junit', name: 'junit', version: '4.+'
+
+
+
 }
+
 
