--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,21 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE")
+    }
+}
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'application'
+apply plugin: 'spring-boot'
+
+//mainClassName = 'com.bjs.application.hello.HelloWorld'
+
+
+
 repositories {
     mavenCentral()
 }
@@ -11,17 +27,25 @@ jar {
     version =  '0.1.0-SNAPSHOT'
 }
 
+
+
+
+dependencies {
+   compile("org.springframework.boot:spring-boot-starter-web") {
+        exclude module: "spring-boot-starter-tomcat"
+    }
+    compile("org.springframework.boot:spring-boot-starter-jetty")
+    // end::jetty[]
+    // tag::actuator[]
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    // end::actuator[]
+    testCompile("junit:junit")
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
 
-dependencies {
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    compile "joda-time:joda-time:2.2"
-    testCompile group: 'junit', name: 'junit', version: '4.+'
 
-
-
-}
 
 
